# sensors-sys

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: lib.rs  sensors-sys.h  tests.rs
